# rpi-energy-meter

./: .gitignore  CLAUDE.md  README.md  config.toml.example  pyproject.toml  requirements.txt
PCB/: Hammond.kicad_sym  Library.bak  Library.kicad_sym  README.md  RPiWattMeterHatv3.kicad_pcb  RPiWattMeterHatv3.kicad_prl  RPiWattMeterHatv3.kicad_pro  RPiWattMeterHatv3.kicad_sch  Wuerth.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Production/: RPiWattMeterHatv3-B_Cu.gbl  RPiWattMeterHatv3-B_Mask.gbs  RPiWattMeterHatv3-B_Paste.gbp  RPiWattMeterHatv3-B_Silkscreen.gbo  RPiWattMeterHatv3-Edge_Cuts.gm1  RPiWattMeterHatv3-F_Cu.gtl  RPiWattMeterHatv3-F_Mask.gts  RPiWattMeterHatv3-F_Paste.gtp  RPiWattMeterHatv3-F_Silkscreen.gto  RPiWattMeterHatv3-NPTH-drl_map.gbr  RPiWattMeterHatv3-NPTH.drl  RPiWattMeterHatv3-PTH-drl_map.gbr  RPiWattMeterHatv3-PTH.drl  RPiWattMeterHatv3.csv
PCB/RPiWattMeterFootprints.pretty/: Hammond_160D20.kicad_mod  PhoenixContact_1891108.kicad_mod  PhoenixContact_PTSA 0,5_12-2,5-F.kicad_mod  Wuerth_750817018.kicad_mod  schem_high_voltage.kicad_mod
Printables/: DIN Rail mount.3mf
examples/: rpi-energy-meter.service
examples/debug/: Phase_1.html  Phase_2.html  Phase_3.html
rpi_energy_meter/: __init__.py  __main__.py  config.py  energy_meter.py  influxv2_interface.py  logging.py  mcp3008.py  plotting.py  samples.py  utils.py
rpi_energy_meter/helper/: mcp3008hwspi
system_overlay/: spi0-3cs-overlay.dtbo  spi0-3cs-overlay.dts
