[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-energy-meter"
description = "Measures current power and energy metrics in real time"
authors = [
    { name = "chatgpt" },
    { name = "Alexander Temp", email = "alex@aewtemp.de" }
]
requires-python = ">=3.9"
keywords = ["raspberry pi", "energy", "power measurement", "mcp3008", "spi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
    "Intended Audience :: Developers"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[project.scripts]
rpi-energy-meter = "rpi_energy_meter.__main__:main"

[project.urls]
Homepage = "https://github.com/aewtemp/rpi-energy-meter"

[tool.setuptools.packages.find]
where = ["."]
include = ["rpi_energy_meter*"]

[tool.setuptools.package-data]
rpi_energy_meter = ["helper/*"]

[tool.setuptools.dynamic]
version = {attr = "rpi_energy_meter.__init__.__version__"}
dependencies = {file = ["requirements.txt"]}



[tool.ruff]
line-length = 120
target-version = "py39"

exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PLC",  # pylint convention
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
]
ignore = [
    "E501",  # line-too-long (formatter handles this)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["rpi_energy_meter"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
